prog: Removed constructors and LoggerHelper.java to use @RequiredArgsConstructor & @Slf4j